--- a/style.css
+++ b/style.css
@@ -3,6 +3,24 @@ table {
     background-color: black;
     border: 5px blue;
     font-family:"Courier New", Courier, monospace;
+    text-align:left;
+    margin:1em auto;
+}
+
+h1 {
+    background-color:purple;
+    width:290px;
+    margin:1em auto;
+	border-radius:19px/19px;
+	font-family:sans-serif;
+}
+
+h2 {
+    background-color:green;
+    width:200px;
+    margin:1em auto;
+	border-radius:19px/19px;
+	font-family:sans-serif;
 }
 
 body {
@@ -11,7 +29,9 @@ body {
     background-image: url(images/the_devil.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: center
+    background-position: center;
+    text-align:center;
+	font-family:sans-serif;
 }
 
 a {
