--- a/style.css
+++ b/style.css
@@ -1,12 +1,3 @@
-table {
-    color: green;
-    background-color: black;
-    border: 5px blue;
-    font-family:"Courier New", Courier, monospace;
-    text-align:left;
-    margin:1em auto;
-}
-
 h1 {
     background-color:purple;
     width:290px;
@@ -23,18 +14,43 @@ h2 {
 	font-family:sans-serif;
 }
 
+p {
+    color:white;
+    background-color:black;
+    width:480px;
+    margin:1em auto;
+	border-radius:9px/9px;
+}
+
+dl {
+    color:white;
+    background-color:black;
+    width:380px;
+    margin:1em auto;
+	border-radius:18px/18px;
+}
+
+a {
+    color:white;
+    font-variant: normal;
+}
+
+table {
+    color: green;
+    background-color: black;
+    border: 5px blue;
+    font-family:"Courier New", Courier, monospace;
+    text-align:left;
+    margin:1em auto;
+}
+
 body {
     /*background-image: <images/the_devil.jpg>;*/
+    text-align:center;
+	font-family:sans-serif;
     background-size: cover;
     background-image: url(images/the_devil.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
-    text-align:center;
-	font-family:sans-serif;
-}
-
-a {
-    color: black;
-    font-variant: normal;
 }
