--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ p {
     background-color:black;
     width:480px;
     margin:1em auto;
-	border-radius:9px/9px;
+	border-radius:50px/50px;
 }
 
 dl {
@@ -55,4 +55,25 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
+}
+
+.drop-menu {
+    position: fixed;
+    /*background-color: teal;*/
+    color: gold;
+    left: 0px;
+    top: 0px
+}
+
+.drop-menu ul ul {
+    display: none;
+}
+
+.drop-menu li:hover > ul {
+    left:0px;
+    display: block;
+}
+
+.flr {
+    vertical-align:middle;
 }
