cleaned up table appearance and syntax

--- a/style.css
+++ b/style.css
@@ -46,6 +46,10 @@ table {
     margin:1em auto;
 }
 
+td {
+    width: 120px;
+}
+
 body {
     /*background-image: <images/the_devil.jpg>;*/
     text-align:center;
